feat: Add Twelve Data provider for exchange rates and securities

--- a/app/views/settings/hostings/show.html.erb
+++ b/app/views/settings/hostings/show.html.erb
@@ -4,6 +4,9 @@
   <div class="space-y-6">
     <%= render "settings/hostings/synth_settings" %>
   </div>
+  <div class="space-y-6">
+    <%= render "settings/hostings/twelve_data_settings" %>
+  </div>
 <% end %>
 
 <%= settings_section title: t(".invites") do %>
