--- a/app/views/categories/_color_avatar.html.erb
+++ b/app/views/categories/_color_avatar.html.erb
@@ -2,7 +2,7 @@
 
 <span
       data-category-target="avatar"
-      class="w-14 h-14 flex items-center justify-center rounded-full"
+      class="w-14 h-14 flex items-center justify-center rounded-sm"
       style="background-color: color-mix(in oklab, <%= category.color %> 10%, transparent); color: <%= category.color %>">
   <%= icon(category.lucide_icon, size: "2xl", color: "current") %>
 </span>
