--- a/app/views/settings/hostings/show.html.erb
+++ b/app/views/settings/hostings/show.html.erb
@@ -2,6 +2,7 @@
 
 <%= settings_section title: t(".general") do %>
   <div class="space-y-6">
+    <%= render "settings/hostings/brand_fetch_settings" %>
     <%= render "settings/hostings/twelve_data_settings" %>
   </div>
 <% end %>
