--- a/app/views/accounts/_account_sidebar_tabs.html.erb
+++ b/app/views/accounts/_account_sidebar_tabs.html.erb
@@ -12,10 +12,10 @@
         <%= icon("chevron-down", color: "warning", class: "group-open:transform group-open:rotate-180") %>
       </summary>
       <div class="text-xs py-2 space-y-2">
-        <p>Maybe uses Synth API to fetch historical exchange rates, security prices, and more.  This data is required to calculate accurate historical account balances.</p>
+        <p>Sure uses third party providers to fetch historical exchange rates, security prices, and more.  This data is required to calculate accurate historical account balances.</p>
 
         <p>
-          <%= link_to "Add your Synth API key here.", settings_hosting_path, class: "text-yellow-600 underline" %>
+          <%= link_to "Configure your providers here.", settings_hosting_path, class: "text-yellow-600 underline" %>
         </p>
       </div>
     </details>
