--- a/app/views/settings/preferences/show.html.erb
+++ b/app/views/settings/preferences/show.html.erb
@@ -30,9 +30,9 @@
             { label: t(".default_period") },
             { data: { auto_submit_form_target: "auto" } } %>
 
-        <%= form.select :default_order,
-            MenuOrder.all.map { |order| [ order.label, order.key ] },
-            { label: t(".default_order") },
+        <%= form.select :default_account_order,
+            AccountOrder.all.map { |order| [ order.label, order.key ] },
+            { label: t(".default_account_order") },
             { data: { auto_submit_form_target: "auto" } } %>
 
         <%= family_form.select :country,
