--- a/app/views/settings/hostings/show.html.erb
+++ b/app/views/settings/hostings/show.html.erb
@@ -1,9 +1,7 @@
 <%= content_for :page_title, t(".title") %>
 
 <%= settings_section title: t(".general") do %>
-  <div class="space-y-6">
-    <%= render "settings/hostings/synth_settings" %>
-  </div>
+  <div class="space-y-6"></div>
 <% end %>
 
 <%= settings_section title: t(".invites") do %>
