Remove Intercom integration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
           <%= render DS::Button.new(
             variant: "icon",
             icon: "message-circle-question",
-            data: { action: "intercom#show" }
+            href: "https://link.maybe.co/discord"
           ) %>
 
           <%= render "users/user_menu", user: Current.user %>
