More documentation/Discord link updates

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
           <%= render DS::Button.new(
             variant: "icon",
             icon: "message-circle-question",
-            href: "https://link.maybe.co/discord"
+            href: "https://discord.gg/36ZGBsxYEK"
           ) %>
 
           <%= render "users/user_menu", user: Current.user %>
