chore: updated indentation

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -39,9 +39,7 @@
                       label:    t(".tags_label"),
                       container_class: "h-40"
                     },
-                    {
-                      "data-controller": "multi-select",
-                    } %>
+                    { "data-controller": "multi-select" } %>
     <% end %>
     <%= f.text_area :notes,
                     label: t(".note_label"),
