sorted tags naturally and reverted the dev port back to 3000

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -32,7 +32,7 @@
   <%= render DS::Disclosure.new(title: t(".details")) do %>
     <%= f.fields_for :entryable do |ef| %>
       <%= ef.select :tag_ids,
-                    @tags.map { |tag| [tag.name, tag.id] },
+                    Current.family.tags.sorted_naturally.pluck(:name, :id),
                     {
                       include_blank: t(".none"),
                       multiple: true,
