fix: fixed version

--- a/app/views/settings/_user_avatar.html.erb
+++ b/app/views/settings/_user_avatar.html.erb
@@ -3,6 +3,6 @@
 <div class="w-full h-full bg-surface-inset hover:bg-surface-inset-hover text-secondary rounded-full flex items-center justify-center text-lg uppercase relative">
   <%= initials %>
   <% if avatar_url.present? %>
-    <%= image_tag avatar_url, class: "absolute inset-0 rounded-full w-full h-full object-cover", loading: lazy ? "lazy" : "eager", alt: local_assigns.fetch(:alt_text, 'User avatar') %>
+    <%= image_tag avatar_url, class: "absolute inset-0 rounded-full w-full h-full object-cover", loading: lazy ? "lazy" : "eager" %>
   <% end %>
 </div>
