--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -38,6 +38,11 @@
   }
 }
 
+.profiler-button {
+  position: fixed;
+  top: env(safe-area-inset-top, 0);
+}
+
 .combobox {
   .hw-combobox__main__wrapper,
   .hw-combobox__input {
