correct dialog#close -> DS--dialog#close

--- a/app/views/accounts/new/_container.html.erb
+++ b/app/views/accounts/new/_container.html.erb
@@ -16,7 +16,7 @@
         <span class="text-primary"><%= title %></span>
       </div>
 
-      <%= icon("x", as_button: true, size: "lg", data: { action: "dialog#close" }) %>
+      <%= icon("x", as_button: true, size: "lg", data: { action: "DS--dialog#close" }) %>
     </div>
 
     <div class="p-2 text-subdued">
