--- a/app/views/rules/confirm.html.erb
+++ b/app/views/rules/confirm.html.erb
@@ -1,4 +1,4 @@
-<%= render DS::Dialog.new(reload_on_close: true) do |dialog| %>
+<%= render DS::Dialog.new(reload_on_close: false) do |dialog| %>
   <%
     title = if @rule.name.present?
               "Confirm changes to \"#{@rule.name}\""
