--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -2,17 +2,16 @@
   <h1 class="text-primary text-xl font-medium">Rules</h1>
   <div class="flex items-center gap-2">
     <% if @rules.any? %>
-      <%= render DS::Link.new(
-        text: "Apply all",
-        variant: "secondary",
-        href: confirm_all_rules_path,
-        icon: "refresh-cw",
-        frame: :modal
-      ) %>
       <%= render DS::Menu.new do |menu| %>
         <% menu.with_item(
+          variant: "link",
+          text: "Apply all",
+          href: confirm_all_rules_path,
+          icon: "refresh-cw",
+          frame: :modal) %>
+        <% menu.with_item(
           variant: "button",
-          text: "Delete all rules",
+          text: "Delete all",
           href: destroy_all_rules_path,
           icon: "trash-2",
           method: :delete,
