--- a/app/views/accounts/new/_method_selector.html.erb
+++ b/app/views/accounts/new/_method_selector.html.erb
@@ -32,5 +32,15 @@
         <%= t("accounts.new.method_selector.connected_entry_eu") %>
       <% end %>
     <% end %>
+
+    <%# SimpleFin Link %>
+    <%= link_to new_simplefin_item_path,
+                class: "text-primary flex items-center gap-4 w-full text-center focus:outline-hidden focus:bg-gray-50 border border-transparent focus:border focus:border-gray-200 px-2 hover:bg-gray-50 rounded-lg p-2",
+                data: { turbo_frame: "modal" } do %>
+      <span class="flex w-8 h-8 shrink-0 grow-0 items-center justify-center rounded-lg bg-green-100 shadow-[inset_0_0_0_1px_rgba(0,0,0,0.02)]">
+        <%= icon("building-2", class: "text-green-600") %>
+      </span>
+      Connect with SimpleFin
+    <% end %>
   </div>
 <% end %>
