--- a/app/views/simplefin_items/setup_accounts.html.erb
+++ b/app/views/simplefin_items/setup_accounts.html.erb
@@ -50,8 +50,7 @@
                 <%= label_tag "account_types[#{simplefin_account.id}]", "Account Type:",
                              class: "block text-sm font-medium text-primary mb-2" %>
                 <%= select_tag "account_types[#{simplefin_account.id}]",
-                              options_for_select(@account_type_options,
-                                Account.map_simplefin_type_to_accountable_type(simplefin_account.account_type, account_name: simplefin_account.name)),
+                              options_for_select(@account_type_options),
                               { class: "w-full px-3 py-2 border border-primary rounded-lg focus:ring-2 focus:ring-blue-600 focus:border-blue-600",
                                 data: {
                                   action: "change->account-type-selector#updateSubtype"
