--- a/app/views/accounts/new/_method_selector.html.erb
+++ b/app/views/accounts/new/_method_selector.html.erb
@@ -33,14 +33,16 @@
       <% end %>
     <% end %>
 
-    <%# SimpleFin Link %>
-    <%= link_to new_simplefin_item_path,
-                class: "text-primary flex items-center gap-4 w-full text-center focus:outline-hidden focus:bg-surface border border-transparent focus:border focus:border-primary px-2 hover:bg-surface rounded-lg p-2",
-                data: { turbo_frame: "modal" } do %>
-      <span class="flex w-8 h-8 shrink-0 grow-0 items-center justify-center rounded-lg bg-alpha-black-50 shadow-[inset_0_0_0_1px_rgba(0,0,0,0.02)]">
-        <%= icon("building-2") %>
-      </span>
-      Connect with SimpleFin
+    <% if show_us_link %>
+      <%# SimpleFin Link - North America only %>
+      <%= link_to new_simplefin_item_path,
+                  class: "text-primary flex items-center gap-4 w-full text-center focus:outline-hidden focus:bg-surface border border-transparent focus:border focus:border-primary px-2 hover:bg-surface rounded-lg p-2",
+                  data: { turbo_frame: "modal" } do %>
+        <span class="flex w-8 h-8 shrink-0 grow-0 items-center justify-center rounded-lg bg-alpha-black-50 shadow-[inset_0_0_0_1px_rgba(0,0,0,0.02)]">
+          <%= icon("building-2") %>
+        </span>
+        Connect with SimpleFin
+      <% end %>
     <% end %>
   </div>
 <% end %>
