--- a/app/views/accounts/show/_header.html.erb
+++ b/app/views/accounts/show/_header.html.erb
@@ -32,9 +32,7 @@
             "refresh-cw",
             as_button: true,
             size: "sm",
-            href: account.plaid_account_id.present? ? sync_plaid_item_path(account.plaid_account.plaid_item) :
-                  account.simplefin_account_id.present? ? sync_simplefin_item_path(account.simplefin_account.simplefin_item) :
-                  sync_account_path(account),
+            href: sync_path_for(account),
             disabled: account.syncing?,
             frame: :_top
           ) %>
