Add option to "skip" adding an account

--- a/app/views/simplefin_items/setup_accounts.html.erb
+++ b/app/views/simplefin_items/setup_accounts.html.erb
@@ -29,6 +29,7 @@
                 <li><strong>Investment</strong> - Brokerage, 401(k), IRA accounts</li>
                 <li><strong>Loan or Mortgage</strong> - Debt accounts</li>
                 <li><strong>Other Asset</strong> - Everything else</li>
+                <li><strong>Skip - don't add</strong> - Don't import this account</li>
               </ul>
             </div>
           </div>
