add norefeerrer to Github link

--- a/app/views/settings/bank_sync/show.html.erb
+++ b/app/views/settings/bank_sync/show.html.erb
@@ -16,7 +16,7 @@
       </div>
     <% end %>
 
-    <%= link_to "https://github.com/we-promise/sure/blob/main/docs/hosting/plaid.md", class: "block bg-surface-inset-hover hover:bg-surface-hover rounded-xl p-4", target: "_blank", rel: "noopener" do %>
+    <%= link_to "https://github.com/we-promise/sure/blob/main/docs/hosting/plaid.md", class: "block bg-surface-inset-hover hover:bg-surface-hover rounded-xl p-4", target: "_blank", rel: "noopener noreferrer" do %>
       <div class="flex items-center gap-4">
         <%= icon("arrow-right", color: "current") %>
         <div>
