--- a/app/views/simplefin_items/edit.html.erb
+++ b/app/views/simplefin_items/edit.html.erb
@@ -18,7 +18,7 @@
               <strong>Your SimpleFin connection needs to be updated:</strong>
             </p>
             <ol class="text-xs text-secondary space-y-1 list-decimal list-inside">
-              <li>Visit <a href="https://bridge.simplefin.org/simplefin/create" target="_blank" class="text-blue-600 hover:text-blue-800 underline">SimpleFin Bridge</a> to create a new setup token</li>
+              <li>Visit <a href="https://bridge.simplefin.org/simplefin/create" target="_blank" class="text-link hover:text-link underline">SimpleFin Bridge</a> to create a new setup token</li>
               <li>Copy the token and paste it below</li>
               <li>Click "Update Connection" to restore access</li>
             </ol>
