--- a/app/views/settings/hostings/_yahoo_finance_settings.html.erb
+++ b/app/views/settings/hostings/_yahoo_finance_settings.html.erb
@@ -6,7 +6,7 @@
   <% if @yahoo_finance_usage.present? && @yahoo_finance_usage.success? %>
     <div class="space-y-4">
       <div class="flex items-center space-x-3">
-        <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+        <div class="w-3 h-3 bg-success rounded-full"></div>
         <p class="text-sm text-secondary">
           <%= t(".status_active") %>
         </p>
@@ -15,7 +15,7 @@
   <% else %>
     <div class="space-y-4">
       <div class="flex items-center space-x-3">
-        <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+        <div class="w-3 h-3 bg-error rounded-full"></div>
         <p class="text-sm text-secondary">
           <%= t(".status_inactive") %>
         </p>
