--- a/app/views/wise_items/show.html.erb
+++ b/app/views/wise_items/show.html.erb
@@ -26,7 +26,7 @@
       
       <div class="flex gap-2">
         <% unless @wise_item.syncing? %>
-          <%= link_to wise_item_sync_path(@wise_item), method: :post, class: "btn btn--secondary" do %>
+          <%= link_to sync_wise_item_path(@wise_item), method: :post, class: "btn btn--secondary" do %>
             <%= icon "refresh-cw", class: "w-4 h-4 mr-1" %>
             Sync Now
           <% end %>
