--- a/app/views/wise_items/index.html.erb
+++ b/app/views/wise_items/index.html.erb
@@ -14,7 +14,7 @@
 
     <div class="space-y-2">
       <% @wise_items.each do |wise_item| %>
-        <%= render "wise_item", wise_item: wise_item %>
+        <%= render "wise_item_simple", wise_item: wise_item %>
       <% end %>
     </div>
   <% else %>
