--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -21,7 +21,7 @@
   </div>
 </header>
 
-<% if @manual_accounts.empty? && @plaid_items.empty? && @simplefin_items.empty? %>
+<% if @manual_accounts.empty? && @plaid_items.empty? && @simplefin_items.empty? && @wise_items.empty? %>
   <%= render "empty" %>
 <% else %>
   <div class="space-y-2">
@@ -31,6 +31,10 @@
 
     <% if @simplefin_items.any? %>
       <%= render @simplefin_items.sort_by(&:created_at) %>
+    <% end %>
+
+    <% if @wise_items.any? %>
+      <%= render @wise_items.sort_by(&:created_at) %>
     <% end %>
 
     <% if @manual_accounts.any? %>
